--- a/css/github.css
+++ b/css/github.css
@@ -11,7 +11,7 @@ img {
 } 
 
 body {
-    background-color: #1F2328;
+    background-color: black;
 }
 
 ::-webkit-scrollbar {
@@ -24,10 +24,12 @@ a {
     text-align: center;
     text-decoration: none;
     font-size: 20px;
-    background-color: #1F2328;
+    background-color:#1f23288c;
     color: white;
+    margin: -4px;
     padding: 20px;
 }
 a:hover {
     text-decoration: underline;
+    background-color: black ;
 }
