--- a/css/linkedin.css
+++ b/css/linkedin.css
@@ -7,7 +7,8 @@
     }
 
     img {
-        width: 230vw;
+        width: 232vw;
+        height: 100vh;
     } 
 
     body {
@@ -24,10 +25,12 @@
         text-align: center;
         text-decoration: none;
         font-size: 20px;
-        background-color: #0A66C2;
+        background-color: #0a97c2;
         color: white;
+        margin: -4px;
         padding: 20px;
     }
     a:hover {
         text-decoration: underline;
+        background-color: #0A66C2;
     }
